# auto-vendor-vetting

./: Cargo.toml  ReadMe.md
docs/architecture/: adapter-rust.spec.md
docs/decisions/: 001-Cargo-lock-as-Canonical-Source.md  002-TCS-Classification-Deterministic-Heuristics.md  003-Offline-First-Vendor-Management.md  004-SBOM-Generation-Without-Vulnerability-Scoring.md  005-Drift-Detection-and-Epoch-Comparison.md  ReadMe.md
docs/requirements/adapter-rust/: 001-Dependency-Analysis.md  002-TCS-Classification.md  003-Security-Auditing-Integration.md  004-Dependency-Vendoring.md  005-SBOM-Generation.md  006-Drift-Detection.md  007-Configuration-Management.md  008-Error-Handling-and-Logging.md  ReadMe.md
src/: error.rs  lib.rs  main.rs
src/adapter/: audit_runner.rs  dependency_parser.rs  drift_detector.rs  mod.rs  rust_adapter.rs  sbom_generator.rs  tcs_classifier.rs  vendor_manager.rs
src/config/: mod.rs  rust_config.rs
src/models/: audit_types.rs  cargo_types.rs  config_types.rs  dependency_graph.rs  drift_types.rs  mod.rs  project_types.rs  sbom_types.rs  vendor_types.rs
src/utils/: checksum.rs  command_runner.rs  mod.rs
