[package]
name = "rust-ecosystem-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Supply Chain Security Team"]
description = "Rust ecosystem adapter for universal supply-chain security system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/org/rust-ecosystem-adapter"
keywords = ["supply-chain", "security", "rust", "dependencies", "audit"]
categories = ["development-tools", "security"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# Command line interface
clap = { version = "4.0", features = ["derive"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# File system operations
walkdir = "2.0"
# Regular expressions
regex = "1.0"
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# Cryptographic hashes
sha2 = "0.10"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP client (for online mode)
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
# Property-based testing
proptest = "1.0"
# Testing utilities
tempfile = "3.0"
pretty_assertions = "1.0"
# Test logging
tracing-test = "0.2"

[features]
default = ["online"]
online = ["dep:reqwest"]
offline = []

[[bin]]
name = "rust-adapter"
path = "src/main.rs"

[lib]
name = "rust_ecosystem_adapter"
path = "src/lib.rs"